--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -6,6 +6,7 @@
 
 <GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1"
           xmlns="http://javafx.com/javafx/11.0.1" fx:controller="sample.Controller">
-   <ImageView fx:id="imgView" fitHeight="910.0" fitWidth="1500.0" focusTraversable="true" pickOnBounds="true"
+   <ImageView fx:id="imgView" fitHeight="680.0" fitWidth="1200.0" focusTraversable="true" pickOnBounds="true"
               preserveRatio="true"/>
+   <!--Tamaño ventana antes: fitHeight="910.0" fitWidth="1500.0"-->
 </GridPane>
